src/AST/Program.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Program.java */
package src.AST;

import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.IOException;

import src.codegeneration.CodeGenerator;

public
class Program/*@bgen(jjtree)*/implements ProgramTreeConstants, ProgramConstants {/*@bgen(jjtree)*/
  protected static JJTProgramState jjtree = new JJTProgramState();private static Program myProg;
private static String FILENAME;

public
  static void main(String args[]) throws ParseException {

    if (args.length != 1) {
      System.out.println("Error: Bad command or filename. Syntax: java Program [filename.tpl]");
      System.exit(0);
    }
    FILENAME = args[0];

    if (createInputStream() == false)
      return;

    ASTProgram root = myProg.Program(); // devolve referencia para o nó da raiz da árvore
    root.dump("");

    if(!root.analyse())
        System.out.println("We have sematic error(s) !! Be aware !!");

    System.out.println("\n *********** TABLES *********** ");
    root.printTables("SYMBOL TABLE: ", "METHODS TABLE: ");


    try {
      CodeGenerator generator = new CodeGenerator(root, "test-file.j");
            generator.generateCode();
    } catch (IOException e) {
      e.printStackTrace();
    }
  }

public
  static boolean createInputStream() {
    File file = new File(FILENAME);

    FileInputStream stream;

    try {
      stream = new FileInputStream(file);
      myProg = new Program(stream);
    } catch (FileNotFoundException e) {
      System.out.println("Error in stream constructor: ");
      System.out.println("Usage: java Yal filePath [-r=<n>] [-o]");
      e.printStackTrace();
      return false;
    }

    return true;
  }

  static void skip_to(int token_kind) throws ParseException {
                                           /*@bgen(jjtree) skip_to */
ASTskip_to jjtn000 = new ASTskip_to(JJTSKIP_TO);
boolean jjtc000 = true;
jjtree.openNodeScope(jjtn000);
jjtn000.jjtSetFirstToken(getToken(1));
try {ParseException exception = generateParseException();
  System.out.println(exception.toString());

  Token t;
  do {
    t = getNextToken();
  } while (t.kind != token_kind);/*@bgen(jjtree)*/
} finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
    jjtn000.jjtSetLastToken(getToken(0));
  }
}
  }

  static final public ASTProgram Program() throws ParseException {
                        /*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      ClassDecl();
      jj_consume_token(0);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                     jjtn000.jjtSetLastToken(getToken(0));
                     {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ClassDecl() throws ParseException {
                           /*@bgen(jjtree) Class */
  ASTClass jjtn000 = new ASTClass(JJTCLASS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));Token n;
  String s1;
    try {
      try {
        jj_consume_token(CLASS);
        n = jj_consume_token(ID);
                       jjtn000.name = n.image;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EXTENDS:
          ExtendClass();
          break;
        default:
          jj_la1[0] = jj_gen;
          ;
        }
        jj_consume_token(L_CBRACKET);
      } catch (ParseException e) {
    System.out.println("CAUGHT CLASS INITIALIZATION DECLARATION");
    skip_to(L_CBRACKET);
      }
      try {
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INT:
          case BOOLEAN:
            ;
            break;
          default:
            jj_la1[1] = jj_gen;
            break label_1;
          }
          VarDecl();
        }
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PUBLIC:
            ;
            break;
          default:
            jj_la1[2] = jj_gen;
            break label_2;
          }
          jj_consume_token(PUBLIC);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case STATIC:
            MainDecl();
            break;
          case INT:
          case BOOLEAN:
            MethodDecl();
            break;
          default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(R_CBRACKET);
      } catch (ParseException e) {
    System.out.println("CAUGHT CLASS BLOCK DECLARATION");
    skip_to(R_CBRACKET);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  static final public void ExtendClass() throws ParseException {
                               /*@bgen(jjtree) Extends */
                                ASTExtends jjtn000 = new ASTExtends(JJTEXTENDS);
                                boolean jjtc000 = true;
                                jjtree.openNodeScope(jjtn000);
                                jjtn000.jjtSetFirstToken(getToken(1));Token n;
    try {
      jj_consume_token(EXTENDS);
      n = jj_consume_token(ID);
                       jjtree.closeNodeScope(jjtn000, true);
                       jjtc000 = false;
                       jjtn000.jjtSetLastToken(getToken(0));
                       jjtn000.name = n.image;
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  static final public void VarDecl() throws ParseException {
                       /*@bgen(jjtree) Var */
  ASTVar jjtn000 = new ASTVar(JJTVAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));Token n1;
  String s1;
    try {
      try {
        s1 = Type();
                  jjtn000.type = s1;
        n1 = jj_consume_token(ID);
                jjtn000.name = n1.image;
        jj_consume_token(SEMI_COLON);
      } catch (ParseException e) {
    System.out.println("CAUGHT VAR DECLARATION");
    skip_to(SEMI_COLON);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  static final public void MainDecl() throws ParseException {
                         /*@bgen(jjtree) Main */
                          ASTMain jjtn000 = new ASTMain(JJTMAIN);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);
                          jjtn000.jjtSetFirstToken(getToken(1));Token n2;
    try {
      try {
        jj_consume_token(STATIC);
        jj_consume_token(VOID);
        jj_consume_token(MAIN);
        jj_consume_token(L_PARENTHESIS);
        jj_consume_token(STRING);
        jj_consume_token(L_BRACKET);
        jj_consume_token(R_BRACKET);
        n2 = jj_consume_token(ID);
      jjtn000.name = n2.image; jjtn000.type = "";
        jj_consume_token(R_PARENTHESIS);
        jj_consume_token(L_CBRACKET);
      } catch (ParseException e) {
    System.out.println("CAUGHT MAIN INITIALIZATION DECLARATION");
    skip_to(L_CBRACKET);
      }
      try {
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INT:
          case BOOLEAN:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_3;
          }
          VarDecl();
        }
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SEMI_COLON:
          case PERIOD:
          case L_PARENTHESIS:
          case L_CBRACKET:
          case L_BRACKET:
          case EXCLM_MARK:
          case NEW:
          case THIS:
          case TRUE:
          case FALSE:
          case ADD:
          case SUB:
          case AND:
          case LESS_THAN:
          case MUL:
          case DIV:
          case IF:
          case WHILE:
          case ID:
          case INTEGER:
          case OCTAL:
          case HEXA:
          case BINARY:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_4;
          }
          Statement();
        }
        jj_consume_token(R_CBRACKET);
      } catch (ParseException e) {
    System.out.println("CAUGHT MAIN BLOCK DECLARATION");
    skip_to(R_CBRACKET);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  static final public void MethodDecl() throws ParseException {
                             /*@bgen(jjtree) Method */
  ASTMethod jjtn000 = new ASTMethod(JJTMETHOD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));Token n3, n4;
  String s1;
    try {
      try {
        s1 = Type();
                  jjtn000.type = s1;
        n3 = jj_consume_token(ID);
                jjtn000.name = n3.image;
        jj_consume_token(L_PARENTHESIS);
        MethodArgs();
        jj_consume_token(R_PARENTHESIS);
      } catch (ParseException e) {
    System.out.println("CAUGHT METHOD DECLARATION");
    skip_to(R_PARENTHESIS);
      }
      try {
        jj_consume_token(L_CBRACKET);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INT:
          case BOOLEAN:
            ;
            break;
          default:
            jj_la1[6] = jj_gen;
            break label_5;
          }
          VarDecl();
        }
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SEMI_COLON:
          case PERIOD:
          case L_PARENTHESIS:
          case L_CBRACKET:
          case L_BRACKET:
          case EXCLM_MARK:
          case NEW:
          case THIS:
          case TRUE:
          case FALSE:
          case ADD:
          case SUB:
          case AND:
          case LESS_THAN:
          case MUL:
          case DIV:
          case IF:
          case WHILE:
          case ID:
          case INTEGER:
          case OCTAL:
          case HEXA:
          case BINARY:
            ;
            break;
          default:
            jj_la1[7] = jj_gen;
            break label_6;
          }
          Statement();
        }
        MethodReturn();
        jj_consume_token(R_CBRACKET);
      } catch (ParseException e) {
    System.out.println("CAUGHT METHOD BLOCK DECLARATION");
    skip_to(R_CBRACKET);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  static final public void MethodArgs() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
      Argument();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_7;
        }
        jj_consume_token(COMMA);
        Argument();
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
  }

  static final public void Argument() throws ParseException {
                             /*@bgen(jjtree) Argument */
  ASTArgument jjtn000 = new ASTArgument(JJTARGUMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));Token t1;
  String s1;
    try {
      s1 = Type();
                jjtn000.type = s1;
      t1 = jj_consume_token(ID);
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
              jjtn000.jjtSetLastToken(getToken(0));
              jjtn000.name = t1.image;
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  static final public void MethodReturn() throws ParseException {
                               /*@bgen(jjtree) RETURN */
                                ASTRETURN jjtn000 = new ASTRETURN(JJTRETURN);
                                boolean jjtc000 = true;
                                jjtree.openNodeScope(jjtn000);
                                jjtn000.jjtSetFirstToken(getToken(1));Token t1;
    try {
      t1 = jj_consume_token(RETURN);
                  jjtn000.value = t1.image;
      Expression();
      jj_consume_token(SEMI_COLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  static final public String Type() throws ParseException {
                        Token t1; Boolean b1 = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
      t1 = jj_consume_token(BOOLEAN);
                   {if (true) return t1.image;}
      break;
    case INT:
      t1 = jj_consume_token(INT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case L_BRACKET:
        jj_consume_token(L_BRACKET);
        jj_consume_token(R_BRACKET);
                                       b1 = true;
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
                                                      if(b1) {if (true) return t1.image + "[]";} {if (true) return t1.image;}
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case L_CBRACKET:
      jj_consume_token(L_CBRACKET);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMI_COLON:
        case PERIOD:
        case L_PARENTHESIS:
        case L_CBRACKET:
        case L_BRACKET:
        case EXCLM_MARK:
        case NEW:
        case THIS:
        case TRUE:
        case FALSE:
        case ADD:
        case SUB:
        case AND:
        case LESS_THAN:
        case MUL:
        case DIV:
        case IF:
        case WHILE:
        case ID:
        case INTEGER:
        case OCTAL:
        case HEXA:
        case BINARY:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_8;
        }
        Statement();
      }
      jj_consume_token(R_CBRACKET);
      break;
    case IF:
      IfStatement();
      break;
    case WHILE:
      try {
        WhileStatement();
      } catch (ParseException e) {
    System.out.println("CAUGHT WHILE DECLARATION");
    skip_to(R_PARENTHESIS);
      }
      break;
    default:
      jj_la1[13] = jj_gen;
      if (jj_2_1(2147483647)) {
        StatementAuxiliar();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMI_COLON:
        case PERIOD:
        case L_PARENTHESIS:
        case L_BRACKET:
        case EXCLM_MARK:
        case NEW:
        case THIS:
        case TRUE:
        case FALSE:
        case ADD:
        case SUB:
        case AND:
        case LESS_THAN:
        case MUL:
        case DIV:
        case ID:
        case INTEGER:
        case OCTAL:
        case HEXA:
        case BINARY:
          Expression();
          jj_consume_token(SEMI_COLON);
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void Condition() throws ParseException {
                               /*@bgen(jjtree) CONDITION */
  ASTCONDITION jjtn000 = new ASTCONDITION(JJTCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(L_PARENTHESIS);
      Expression();
      jj_consume_token(R_PARENTHESIS);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  static final public void IfStatement() throws ParseException {
                          /*@bgen(jjtree) IF */
  ASTIF jjtn000 = new ASTIF(JJTIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(IF);
      Condition();
                     ASTIF_BODY jjtn001 = new ASTIF_BODY(JJTIF_BODY);
                     boolean jjtc001 = true;
                     jjtree.openNodeScope(jjtn001);
                     jjtn001.jjtSetFirstToken(getToken(1));
      try {
        Statement();
      } catch (Throwable jjte001) {
                     if (jjtc001) {
                       jjtree.clearNodeScope(jjtn001);
                       jjtc001 = false;
                     } else {
                       jjtree.popNode();
                     }
                     if (jjte001 instanceof RuntimeException) {
                       {if (true) throw (RuntimeException)jjte001;}
                     }
                     if (jjte001 instanceof ParseException) {
                       {if (true) throw (ParseException)jjte001;}
                     }
                     {if (true) throw (Error)jjte001;}
      } finally {
                     if (jjtc001) {
                       jjtree.closeNodeScope(jjtn001,  1);
                       jjtn001.jjtSetLastToken(getToken(0));
                     }
      }
      ElseStatement();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  static final public void ElseStatement() throws ParseException {
                              /*@bgen(jjtree) ELSE */
  ASTELSE jjtn000 = new ASTELSE(JJTELSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(ELSE);
      Statement();
    } catch (Throwable jjte000) {
                                    if (jjtc000) {
                                      jjtree.clearNodeScope(jjtn000);
                                      jjtc000 = false;
                                    } else {
                                      jjtree.popNode();
                                    }
                                    if (jjte000 instanceof RuntimeException) {
                                      {if (true) throw (RuntimeException)jjte000;}
                                    }
                                    if (jjte000 instanceof ParseException) {
                                      {if (true) throw (ParseException)jjte000;}
                                    }
                                    {if (true) throw (Error)jjte000;}
    } finally {
                                    if (jjtc000) {
                                      jjtree.closeNodeScope(jjtn000, true);
                                      jjtn000.jjtSetLastToken(getToken(0));
                                    }
    }
  }

  static final public void WhileStatement() throws ParseException {
                                /*@bgen(jjtree) WHILE */
  ASTWHILE jjtn000 = new ASTWHILE(JJTWHILE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(WHILE);
      Condition();
      Statement();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }
